Use separate job for cypress

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,6 @@ jobs:
           command: docker-compose stop
 
   deploy-check:
-    resource_class: xlarge
     docker:
       - image: quay.io/hmpps/manage-recalls-e2e-tests:latest
     environment:
@@ -84,17 +83,22 @@ jobs:
       - store_artifacts:
           path: target/site/serenity/
           destination: deploy-serenity-report
+
+
+  deploy-check-cypress:
+    resource_class: xlarge
+    docker:
+      - image: quay.io/hmpps/manage-recalls-e2e-tests:latest
+    environment:
+      ENVIRONMENT: <<pipeline.parameters.e2e_environment>>
+    steps:
+      - checkout
       - run:
           name: "Run Cypress tests [<<pipeline.parameters.e2e_environment>>]"
           command: |
-            set +e
             npm i
             npx cypress run --env USERNAME=${SERENITY_USERNAME_<<pipeline.parameters.e2e_environment>>},PASSWORD=${SERENITY_PASSWORD_<<pipeline.parameters.e2e_environment>>},NOMS_NUMBER=${NOMS_NUMBER_<<pipeline.parameters.e2e_environment>>} --config baseUrl=https://manage-recalls-<<pipeline.parameters.e2e_environment>>.hmpps.service.justice.gov.uk
             npm run cypress:report
-            export E2E_RESULT=$?
-            set -e
-            ./report-results-to-dashboard.sh
-            exit $E2E_RESULT
       - store_artifacts:
           path: cypress/screenshots
           destination: screenshots
@@ -110,10 +114,12 @@ workflows:
     jobs:
       - local-check
       - deploy-check
+      - deploy-check-cypress
   deploy_only:
     when: << pipeline.parameters.only_run_deploy_check >>
     jobs:
       - deploy-check
+      - deploy-check-cypress
 
   build_docker:
     when:
