--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cypress-file-upload": "^5.0.8",
     "luxon": "^2.2.0",
     "multiple-cucumber-html-reporter": "^1.18.3",
-    "pdf-parse": "^1.1.1",
-    "typescript": "^4.5.4"
+    "pdf-parse": "^1.1.1"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
