--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -1,7 +1,9 @@
-FROM quay.io/hmpps/manage-recalls-e2e-tests:latest
+FROM cimg/node:16.13
 
 ADD . /home/circleci/project
 
 WORKDIR /home/circleci/project
 
-CMD ["/home/circleci/project/gradlew", "clean", "test", "-Denvironment=ci-local", "-Dchrome.switches=\"--enable-logging;--v=1;--no-sandbox;--disable-dev-shm-usage;--verbose\""]
+RUN npm ci
+
+CMD ["npx", "cypress", "run"]
