--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /home/circleci/project
 
 RUN npm ci
 
-CMD ["npx", "cypress", "run"]
+CMD ["npx", "cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000"]
