--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -17,4 +17,4 @@ services:
     entrypoint: cypress run --config baseUrl=http://manage-recalls-ui:3000 --browser chrome --key e883dffd-b644-4431-989d-0181ae34d0e6
     working_dir: /e2e
     volumes:
-      - ./:/e2e
+      - $PWD/:/e2e
