--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,23 +25,23 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run:
-          name: Build and pull docker containers
+          name: Pull docker containers
           command: |
             docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull
       - run:
           name: Start docker compose and run the end-to-end tests
           command: |
+            set -x
             pwd
             ls -la
-            set -x
-            docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-test-runner manage-recalls-e2e-test-runner || {
-              export exit_code=1
-            }
-            mkdir logs
-            docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
-            docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
-            docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
-            exit $exit_code
+            # docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-test-runner manage-recalls-e2e-test-runner || {
+            #   export exit_code=1
+            # }
+            # mkdir logs
+            # docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
+            # docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
+            # docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
+            # exit $exit_code
       - store_artifacts:
           path: logs
           destination: logs
