--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,16 +32,14 @@ jobs:
           name: Start docker compose and run the end-to-end tests
           command: |
             set -x
-            pwd
-            ls -la
-            # docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-test-runner manage-recalls-e2e-test-runner || {
-            #   export exit_code=1
-            # }
-            # mkdir logs
-            # docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
-            # docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
-            # docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
-            # exit $exit_code
+            docker-compose -f docker-compose.yml -f docker-compose.ci.yml up --exit-code-from manage-recalls-e2e-test-runner manage-recalls-e2e-test-runner || {
+              export exit_code=1
+            }
+            mkdir logs
+            docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
+            docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
+            docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
+            exit $exit_code
       - store_artifacts:
           path: logs
           destination: logs
