--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,6 +16,11 @@ services:
       - DEBUG=cypress:*
     entrypoint: []
     command:
+      - ls
+      - -la
+      - "&&"
+      - pwd
+      - "&&"
       - cypress
       - run
       - --config
