--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -16,19 +16,22 @@ services:
       - DEBUG=cypress:*
     entrypoint: []
     command:
-      - ls
-      - -la
-      - "&&"
-      - pwd
-      - "&&"
-      - cypress
-      - run
-      - --config
-      - baseUrl=http://manage-recalls-ui:3000
-      - --browser
-      - chrome
-      - --key
-      - e883dffd-b644-4431-989d-0181ae34d0e6
+      - /bin/bash
+      - -c
+      - |
+        set -x
+        pwd
+        ls -la /e2e
+        ls -la ../
+        ls -la /
+      # - cypress
+      # - run
+      # - --config
+      # - baseUrl=http://manage-recalls-ui:3000
+      # - --browser
+      # - chrome
+      # - --key
+      # - e883dffd-b644-4431-989d-0181ae34d0e6
     working_dir: /e2e
     volumes:
       - .:/e2e
