--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,11 +7,11 @@ services:
       - HMPPS_AUTH_EXTERNAL_URL=http://hmpps-auth:8080/auth
 
   manage-recalls-e2e-test-runner:
-    networks:
-      - manage-recalls-e2e
+    build:
+      dockerfile: ci-local-mode-docker/Dockerfile
+      context: .
     container_name: manage-recalls-e2e-test-runner
     depends_on: [manage-recalls-ui]
-    image: "cypress/included:8.5.0"
     environment:
       - DEBUG=cypress:*
     entrypoint: []
@@ -33,5 +33,5 @@ services:
       # - --key
       # - e883dffd-b644-4431-989d-0181ae34d0e6
     working_dir: /e2e
-    volumes:
-      - .:/e2e
+    networks:
+      - manage-recalls-e2e
