Put all the cypress stuff in the Dockerfile

--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -5,3 +5,8 @@ RUN mkdir /e2e
 ADD . /e2e
 
 WORKDIR /e2e
+
+ENV DEBUG=cypress:*
+
+ENTRYPOINT []
+CMD ["cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000", "--browser", "chrome", "--key", "e883dffd-b644-4431-989d-0181ae34d0e6"]
