--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -8,5 +8,7 @@ WORKDIR /e2e
 
 ENV DEBUG=cypress:*
 
+RUN npm ci
+
 ENTRYPOINT []
 CMD ["cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000", "--browser", "chrome", "--key", "e883dffd-b644-4431-989d-0181ae34d0e6"]
