--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run:
           name: Build and pull docker containers
           command: |
-            docker-compose -f docker-compose.yml -f docker-compose.ci.yml build --no-cache
+            docker-compose -f docker-compose.yml -f docker-compose.ci.yml build
             docker-compose -f docker-compose.yml -f docker-compose.ci.yml pull
       - run:
           name: Start docker compose and run the end-to-end tests
