--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,7 @@ jobs:
             docker logs manage-recalls-ui-e2e > logs/manage-recalls-ui.log
             docker logs manage-recalls-api-e2e > logs/manage-recalls-api.log
             docker logs localstack_manage-recalls-e2e > logs/localstack_manage-recalls-e2e.log
-            mkdir screenshots
-            docker cp manage-recalls-e2e-test-runner:/e2e/cypress/screenshots/ screenshots/
+            docker cp manage-recalls-e2e-test-runner:/e2e/cypress/screenshots/ .
             exit $exit_code
       - store_artifacts:
           path: logs
