--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -11,4 +11,4 @@ ENV DEBUG=cypress:*
 RUN npm ci
 
 ENTRYPOINT []
-CMD ["cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000", "--browser", "chrome", "--record", "--key", "e883dffd-b644-4431-989d-0181ae34d0e6"]
+CMD ["./ci-local-mode-docker/run-tests.sh"]
