Update cypress image and record runs

--- a/ci-local-mode-docker/Dockerfile
+++ b/ci-local-mode-docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM cypress/included:8.5.0
+FROM cypress/included:9.2.0
 
 RUN mkdir /e2e
 
@@ -11,4 +11,4 @@ ENV DEBUG=cypress:*
 RUN npm ci
 
 ENTRYPOINT []
-CMD ["cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000", "--browser", "chrome", "--key", "e883dffd-b644-4431-989d-0181ae34d0e6"]
+CMD ["cypress", "run", "--config", "baseUrl=http://manage-recalls-ui:3000", "--browser", "chrome", "--record", "--key", "e883dffd-b644-4431-989d-0181ae34d0e6"]
