--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           keys:
             - v2-deps-{{ arch }}-{{ .Branch }}-{{ checksum "package.json" }}
             - v2-deps-{{ arch }}-{{ .Branch }}
-            - v2-deps
+            - v2-deps-{{ arch }}
       - run:
           name: Install NPM dependencies
           command: npm ci
