--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
     networks:
       - manage-recalls-e2e
     container_name: manage-recalls-ui-e2e
-    depends_on: [redis, hmpps-auth, manage-recalls-api]
+    depends_on: [redis, hmpps-auth, manage-recalls-api, fake-os-places-api]
     ports:
       - "3000:3000"
     healthcheck:
@@ -123,7 +123,7 @@ services:
       - SYSTEM_CLIENT_ID=system-client-id
       - SYSTEM_CLIENT_SECRET=system-client-secret
       - SESSION_SECRET=session-secret
-      - OS_PLACES_API_URL=http://fake-os-places-api:9096/search/places/v1
+      - OS_PLACES_API_URL=http://fake-os-places-api:8080/search/places/v1
       - OS_PLACES_API_KEY=key
 
   postgres:
